Fix copyright overflowing over the heart

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,11 @@ ul.list li.image-item h4 small {
     font-weight: 100;
 }
 
+ul.list li.image-item h4 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 ul.list li.image-item p.released {
     font-size: 12px;
 }
